// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/ModalHeaderPresenter  1`] = `
.emotion-0 {
  border-bottom: 1px solid #D4DBE1;
  font-family: ArtifaktElement;
  font-size: 24px;
  margin: 0 32px;
  min-height: 33px;
  padding: 16px 0;
  position: relative;
  z-index: 1002;
}

.emotion-0 .hig__icon-button {
  background: none;
  border: none;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 16px;
  z-index: 1003;
}

.emotion-0 .hig__icon-button:hover,
.emotion-0 .hig__icon-button:focus {
  border-color: transparent;
  background-color: transparent;
}

.emotion-0 .hig__icon-button:hover svg *,
.emotion-0 .hig__icon-button:focus svg * {
  fill: rgba(59,68,84,1);
}

.emotion-0 .hig__icon-button:focus {
  outline: none;
}

<header
  className="emotion-0"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <svg
      className="hig__icon-button__icon"
      height="19"
      viewBox="0 0 19 19"
      width="19"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        x-close-gray
      </title>
      <g
        fill="#949DA2"
        fillRule="evenodd"
      >
        <path
          d="M1.414 0l16.97 16.97-1.413 1.414L0 1.414z"
        />
        <path
          d="M18.385 1.414l-16.97 16.97L0 16.972 16.97 0z"
        />
      </g>
    </svg>
  </button>
  <span />
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  2`] = `
.emotion-0 {
  border-bottom: 1px solid #D4DBE1;
  font-family: ArtifaktElement;
  font-size: 24px;
  margin: 0 32px;
  min-height: 33px;
  padding: 16px 0;
  position: relative;
  z-index: 1002;
}

.emotion-0 .hig__icon-button {
  background: none;
  border: none;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 16px;
  z-index: 1003;
}

.emotion-0 .hig__icon-button:hover,
.emotion-0 .hig__icon-button:focus {
  border-color: transparent;
  background-color: transparent;
}

.emotion-0 .hig__icon-button:hover svg *,
.emotion-0 .hig__icon-button:focus svg * {
  fill: rgba(59,68,84,1);
}

.emotion-0 .hig__icon-button:focus {
  outline: none;
}

<header
  className="emotion-0"
  id={undefined}
>
  <p>
    Title
  </p>
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  3`] = `
.emotion-0 {
  border-bottom: 1px solid #D4DBE1;
  font-family: ArtifaktElement;
  font-size: 24px;
  margin: 0 32px;
  min-height: 33px;
  padding: 16px 0;
  position: relative;
  z-index: 1002;
}

.emotion-0 .hig__icon-button {
  background: none;
  border: none;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 16px;
  z-index: 1003;
}

.emotion-0 .hig__icon-button:hover,
.emotion-0 .hig__icon-button:focus {
  border-color: transparent;
  background-color: transparent;
}

.emotion-0 .hig__icon-button:hover svg *,
.emotion-0 .hig__icon-button:focus svg * {
  fill: rgba(59,68,84,1);
}

.emotion-0 .hig__icon-button:focus {
  outline: none;
}

<header
  className="emotion-0"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <svg
      className="hig__icon-button__icon"
      height="19"
      viewBox="0 0 19 19"
      width="19"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        x-close-gray
      </title>
      <g
        fill="#949DA2"
        fillRule="evenodd"
      >
        <path
          d="M1.414 0l16.97 16.97-1.413 1.414L0 1.414z"
        />
        <path
          d="M18.385 1.414l-16.97 16.97L0 16.972 16.97 0z"
        />
      </g>
    </svg>
  </button>
  <span>
    HELLO
  </span>
</header>
`;
